--- a/mefinl.html
+++ b/mefinl.html
@@ -1,6 +1,6 @@
 <html>
 <head><title>Redirect Notice</title>
-<meta HTTP-EQUIV="REFRESH" CONTENT="1; URL=http://itsbest.link/oKFbY">
+<meta HTTP-EQUIV="REFRESH" CONTENT="1; URL=http://cl.untildogtop.com/t/clk?id=AQrrNTV281TRKxkUl2WjFk">
 </head>
 <body><center>
 <h2></h2>
