--- a/register.html
+++ b/register.html
@@ -1,7 +1,7 @@
 
 <html>
 <head><title>Loading..</title>
-<meta HTTP-EQUIV="REFRESH" CONTENT="2; URL=https://crot21.github.io/instalyou.html">
+<meta HTTP-EQUIV="REFRESH" CONTENT="2; URL=https://mycrott.github.io/crot12/instalyou.html">
 </head>
 <body><center>
 <h2></h2>
