--- a/instalyou.html
+++ b/instalyou.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta property="og:title" content=""/>
-<meta property="og:url" content="https://mycrott.github.io/crot12//mefinl.html"/>
+<meta property="og:url" content="https://mycrott.github.io/crot12/mefinl.html"/>
 <meta property="og:image" content=""/>
 <meta property="og:image:url" content=""/>
 <meta property="og:image:width" content="1200" />
@@ -9,7 +9,7 @@
 <meta property="og:image:type" content="image/jpeg" />
 <meta property="og:description" content=""/>
 <title></title>
-<meta http-equiv="refresh" content="1;https://mycrott.github.io/crot12//mefinl.html">
+<meta http-equiv="refresh" content="1;https://mycrott.github.io/crot12/mefinl.html">
 </head>
 <body>
 </body>
